# sprint-8

./: .env  .gitignore  Dockerfile  Makefile  READ.md  README.md  Readme.md  architecture-sprint-8.sln  comments.txt  docker-compose.yaml  link  package-lock.json  package.json  readme.md  result.txt
API/: .env  go.mod  (+11 more)
api/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  api.ts  app.py  auth.py  build.gradle.kts  example.txt  go.mod  go.sum  index.full.ts  index.js  index.ts  keycloak.json  main.go  main.py  nodemon.json  oidc_checker.py  oidc_token.py  package-lock.json  package.json  pom.xml  pyproject.toml  req.txt  requirements.txt  server.js  server.py  tsconfig.json
api/api/: Dockerfile  build.gradle
api/app/: .env.shared  config.py  initialize.ts  main.py  models.py  routes.py  security.py
api/cmd/reports/: main.go
api/internal/transport/http/: auth.go  http.go  models.go
api/logger/: initialize.ts
api/middlewares/: auth.ts  role.ts  token.ts
api/patches/: keycloak-connect+26.0.7.patch
api/routes/: registerRoutes.ts
api/routes/api/: registerApiRoutes.ts
api/src/: app.controller.ts  app.module.ts  app.py  app.service.ts  auth.py  config.py  index.js  main.ts  reports.controller.ts
api/src/auth/: auth.guard.ts  auth.module.ts
api/src/keycloak/: keycloak.service.ts
api/src/reports/: reports.controller.ts  reports.module.ts  reports.service.ts
api/utils/: decodeToken.ts  env.ts  getPublicKey.ts  savePublicKey.ts  sendError.ts  sendSuccess.ts  sendUnauthenticatedError.ts  sendUnauthorizedError.ts  types.ts  verifyToken.ts
(+162 files in other folders)
